# swaywrits

./: .gitignore  Makefile  README.md  do_break.py  setup.cfg  swaywrits
swaywrits/: __main__.py  do_break.py  swaywrits.py
