[metadata]
name = swaywrits
author = Nolan Leake
author_email = nolan@sigbus.net
maintainer = Nolan Leake
maintainer_email = nolan@sigbus.net
description = swaywrits is a RSI break reminder in the spirit of xwrits
long_description = file: README.md
version = attr: swaywrits.__version__
url = https://github.com/nolanl/swaywrits
keywords = swaywrits
license_files = LICENSE

[options]
python_requires = >= 3.8
packages = find:

[options.entry_points]
console_scripts =
        swaywrits = swaywrits.swaywrits:main

[flake8]
ignore = E402, E261, E262, E265
max-line-length = 132
